Header menu items spacing fix

--- a/sass/parts/_header.sass
+++ b/sass/parts/_header.sass
@@ -23,8 +23,10 @@ header
     +max-screen($breakpoint-lg)
       max-width: 200px
   .menu-item
-    margin-right: 34px
+    margin-right: 30px
     list-style: none
+    +max-screen(1400px)
+      margin-right: 20px
     +max-screen($breakpoint-xl)
       margin-right: 10px
     &:last-child
